--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         sudo apt update
         sudo apt -y install python3  python3-pip cpio wget
-        pip3 install twrpdtgen
+        pip3 install twrpdtgen --break-system-packages
         mkdir dt
       
     - name: Download boot or recovery img
